refactor(toast): refactor && complete docs

--- a/packages/toast/src/_animate.scss
+++ b/packages/toast/src/_animate.scss
@@ -1,4 +1,4 @@
-@keyframes zoomIn {
+@keyframes bounceIn {
   from,
   35% {
     opacity: 0;
@@ -16,7 +16,7 @@
   }
 }
 
-@keyframes zoomOut {
+@keyframes bounceOut {
   from,
   35% {
     opacity: 1;
