--- a/packages/toast/src/_animate.scss
+++ b/packages/toast/src/_animate.scss
@@ -2,7 +2,7 @@
   from,
   35% {
     opacity: 0;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.3, 0.3);
   }
 
   75% {
@@ -45,7 +45,7 @@
 
   from {
     opacity: 0;
-    transform: translate(-50%, 0) translate3d(0, 3000px, 0);
+    transform: translate(-50%, 0) translate3d(0, 1000px, 0);
   }
 
   60% {
@@ -79,7 +79,7 @@
 
   to {
     opacity: 0;
-    transform: translate(-50%, 0) translate3d(0, -2000px, 0);
+    transform: translate(-50%, 0) translate3d(0, -1000px, 0);
   }
 }
 
@@ -94,7 +94,7 @@
 
   0% {
     opacity: 0;
-    transform: translate(-50%, 0) translate3d(0, -3000px, 0);
+    transform: translate(-50%, 0) translate3d(0, -1000px, 0);
   }
 
   60% {
@@ -128,6 +128,6 @@
 
   to {
     opacity: 0;
-    transform: translate(-50%, 0) translate3d(0, 2000px, 0);
+    transform: translate(-50%, 0) translate3d(0, 1000px, 0);
   }
 }
